2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:

	Don't keep looking for covers that are not on amazon.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:

	Amazon cover downloading is back again.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* TODO:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/CoverDatabase.cs:
	* src/FileUtils.cs:
	* src/PlaylistWindow.cs:

	Add BusyLevel to IPlayer. If BusyLevel > 0, Muine displays
	a busy cursor.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Global.cs:

	Clean up ProcessCommandLine.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Support loading multiple folders in one loading session.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Re-commit CoverDB rehash. Bad Tamara! :)

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Small cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up EOS and Previous handling.
	
	* doc/en/Muine.PluginLib/IPlayer.xml:

	Slight clean up in the UIManager example code.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:

	Small ProgressWindow cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Now volume and repeat react to GConf changes too.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Config.cs:
	* src/CoverGetter.cs:
	* src/Global.cs:
	* src/GnomeProxy.cs:
	* src/SongDatabase.cs:

	- Clean up Global stuff to actually be global.
	- GnomeProxy, SongDatabase and CoverGetter react to GConf changes

2005-01-08  Tamara Roberson  <foxxygirltamara@gmail.com>

	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Global.cs:
	* src/HandleView.cs: